Revise tutoring subjects in FAQ
Updated tutoring subjects listed in the FAQ section.

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
       <div class="faq-item">
         <h3>1. What subjects do you tutor in?</h3>
-        <p>We cover Math (K–12, Algebra, Geometry), English (Reading and Writing), Science (Biology, Chemistry, Physics), Social Studies, college entrance exams (SAT/ACT), and specialized high school entrance exams (SHSAT). We can help with other subjects too.</p>
+        <p>We offer tutoring in Basic Math, Basic Reading, Basic Writing, Algebra I & II, Geometry, Biology, Chemistry, Physics, Earth Science, English Language Arts & Essay Writing, College Readiness, Specialized High School Entrance Exams, and College Entrance Exams. We can help with other subjects too..</p>
       </div>
 
       <div class="faq-item">
