Add FAQ item about tutors

--- a/index.html
+++ b/index.html
@@ -62,6 +62,11 @@
         <h3>4. How much does it cost?</h3>
         <p>Please email us. We will work with your budget to find an affordable option.</p>
       </div>
+
+      <div class="faq-item">
+        <h3>4. Who are the tutors?</h3>
+        <p>We strive to connect caring tutors who are experienced, patient, and dedicated to helping students grow.</p>
+      </div>
     </section>
   </main>
 
